--- a/CaptionIt/send.html
+++ b/CaptionIt/send.html
@@ -62,25 +62,6 @@
                 <button class="regular-button" onclick="activateGame()">Start Game</button>
             </div>
         </div>
-
-        <div id="captionSlide" class="slide no-display">
-            <img id="caption-random-pic" class="random-picture" src="" alt="Random picture" />
-            <textarea id="caption-input" placeholder="Enter your caption"></textarea>
-            <button id="submit-caption" onclick="submitCaption()">Submit Caption</button>
-        </div>
-
-        <div id="takeVote" class="slide no-display">
-            <img id="vote-random-pic" class="random-picture" src="" alt="Random picture" />
-            <div class="caption-list" id="captions-container"></div>
-        </div>
-
-        <div id="announceWinner" class="slide no-display">
-            <h5 style="font-weight: bold;">Scores</h5>
-            <br>
-            <div class="score-list"></div>
-        </div>
-
-        <div id="gameOver" class="slide no-display"></div>
     </div>
 
     <div class="chat-container">
@@ -127,12 +108,25 @@
             setCookie('deviceID', deviceID, 365); // Store the device ID in a cookie for 365 days
         }
 
-        let clientPlayerName = "Player" + Math.floor(Math.random() * 1000);
+        function getRandomBrightColor() {
+            const minBrightness = 200;
+            const r = Math.floor(Math.random() * (256 - minBrightness) + minBrightness);
+            const g = Math.floor(Math.random() * (256 - minBrightness) + minBrightness);
+            const b = Math.floor(Math.random() * (256 - minBrightness) + minBrightness);
+
+            return `rgb(${r}, ${g}, ${b})`;
+        }
+
+        // Connection and Game Handling
+        let randomNumber = Math.random();
+        randomNumber = Math.floor(randomNumber * 100) + 1;
+        let clientPlayerName = "player " + randomNumber.toString();
         document.getElementById('player-name-text').innerText = clientPlayerName;
 
         var players = {};
         var lastPeerId = null;
-        var peer = null;
+        var peer = null; // own peer object
+        var hostID = null;
         var conn = null;
         var recvIdInput = document.getElementById("receiver-id");
 
@@ -152,6 +146,7 @@
 
                 peer.on('open', function (id) {
                     if (peer.id === null) {
+                        console.log('Received null id from peer open');
                         peer.id = lastPeerId;
                     } else {
                         lastPeerId = peer.id;
@@ -159,46 +154,51 @@
 
                     console.log('ID: ' + peer.id);
                 });
-
+                peer.on('connection', function (c) {
+                    c.on('open', function () {
+                        c.send("Sender does not accept incoming connections");
+                        setTimeout(function () {
+                            c.close();
+                        }, 500);
+                    });
+                });
                 peer.on('disconnected', function () {
                     status.innerHTML = "Connection lost. Please reconnect";
+                    console.log('Connection lost. Please reconnect');
+
                     peer.id = lastPeerId;
                     peer._lastServerId = lastPeerId;
                     peer.reconnect();
                 });
-
                 peer.on('close', function () {
                     conn = null;
                     status.innerHTML = "Connection destroyed. Please refresh";
+                    console.log('Connection destroyed');
                 });
-
                 peer.on('error', function (err) {
                     console.log(err);
                     alert('' + err);
                 });
-            }
+            };
 
             function join() {
                 if (conn) {
                     conn.close();
                 }
 
-                try {
-                    const queryString = window.location.search;
-                    const urlParams = new URLSearchParams(queryString);
-                    var ID = urlParams.get('hostid');
-                } catch {
-                    ID = recvIdInput.value;
-                }
+                const queryString = window.location.search;
+                const urlParams = new URLSearchParams(queryString);
+                var ID = urlParams.get('hostid');
 
                 conn = peer.connect(ID, {
                     reliable: true,
                 });
 
                 conn.on('open', function () {
-                    recvIdInput.innerHTML = "<span id=\"share-link\">https://" + window.location.hostname +
-                        "/CaptionIt/send.html?hostid=" + conn.peer + "</span>";
+                    recvIdInput.innerHTML = "<span id=\"share-link\">https://" + window.location
+                        .hostname + "/CaptionIt/send.html?hostid=" + conn.peer + "</span>";
                     status.innerHTML = "Connected to: " + conn.peer;
+                    console.log("Connected to: " + conn.peer);
 
                     conn.send(["setPlayerData", {
                         "deviceID": deviceID,
@@ -212,7 +212,6 @@
                     if (command)
                         conn.send(command);
                 });
-
                 conn.on('data', function (data) {
                     switch (data[0]) {
                         case 'playersData':
@@ -224,32 +223,20 @@
                                 "playerID": peer.id,
                             }]);
                             break;
-                        case 'nextState':
-                            game.nextState(data[1]);
-                            break;
-                        case 'updateScores':
-                            updateScoreBoard(data[1]);
-                            break;
-                        case 'displayRandomPicture':
-                            displayRandomPicture(data[1]);
-                            break;
-                        case 'displayCaptionsForVoting':
-                            displayCaptionsForVoting(data[1]);
-                            break;
-                        case 'displayWinner':
-                            displayWinner(data[1]);
+                        case 'updateGameUI':
+                            updateGameUI(data[1]);
                             break;
                         default:
-                            addMessage("<span style=\"color:" + players[data[1]["playerID"]]["colour"] + ";\" class=\"peerMsg\">" +
-                                data[1]["playerName"] + " </span>" + data[1]["msg"]);
+                            addMessage("<span" + " style=\"color:" + players[data[1]["playerID"]][
+                                "colour"] + ";\" class=\"peerMsg\">" + data[1]["playerName"] +
+                                " </span>" + data[1]["msg"]);
                             break;
-                    }
+                    };
                 });
-
                 conn.on('close', function () {
                     status.innerHTML = "Connection closed";
                 });
-            }
+            };
 
             function getUrlParam(name) {
                 name = name.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
@@ -260,7 +247,7 @@
                     return null;
                 else
                     return results[1];
-            }
+            };
 
             function addMessage(msg) {
                 var now = new Date();
@@ -276,16 +263,16 @@
                     if (t < 10)
                         t = "0" + t;
                     return t;
-                }
+                };
 
                 message.innerHTML = message.innerHTML + "<br>" + msg;
                 message.scrollTop = message.scrollHeight;
-            }
+            };
 
             function clearMessages() {
                 message.innerHTML = "";
                 addMessage("Msgs cleared");
-            }
+            };
 
             document.querySelector(".collapse-arrow").addEventListener("click", function () {
                 const chatContainer = document.querySelector(".chat-container");
@@ -373,8 +360,7 @@
                     "playerID": peer.id
                 }]);
             }
-            return;
-        }
+        };
 
         function togglePlayerStatus(e, playerID) {
             if (players[playerID]["inPlay"] == true) {
@@ -398,63 +384,63 @@
             playersConnectedList = "";
 
             for (var player in players) {
-                playersConnectedList += `<div style="color: ${players[player]["colour"]};" class="player-container">`;
-                playersConnectedList += `<div><i class="fa-solid fa-circle ${players[player]["readyUp"] ? 'ready' : 'not-ready'}"></i></div>`;
-                playersConnectedList += `<div id="showName-container" class="showName-container"><p style="color: ${players[player]["colour"]};" class="player-name-text">${players[player]["playerName"]}</p></div>`;
-                playersConnectedList += `<div id="playerStatus-button-container" class="playerStatus-button-container"><i class="fa-solid fa-${players[player]["inPlay"] ? 'user' : 'eye'} playerStatus-button ${players[player]["inPlay"] ? 'playing' : 'spectating'}"></i></div></div>`;
+                if (peer.id == player) {
+                    playersConnectedList = playersConnectedList +
+                        "<div style=\"color: " + players[player]["colour"] + ";\" class=\"player-container\">"
+                    if (players[player]["readyUp"] == true) {
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
+                    } else {
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
+                    }
+                    playersConnectedList = playersConnectedList +
+                        "<div id=\"showName-container\"class=\"showName-container\"><p style=\"color: " + players[
+                            player]["colour"] + ";\" class=\"player-name-text\">" +
+                        players[player]["playerName"] +
+                        "</p><div onclick=\"showChangeName(this)\"id=\"changeName-button-container\"class=\"changeName-button-container\"><i class=\"fa-solid fa-pen changeName-button\"></i></div></div><div id=\"changeName-container\"class=\"changeName-container no-display\"><input type=\"text\" id=\"changeName-input\"placeholder=\"Enter a name...\"><i onclick=\"changeOwnName(this, peer.id, document.getElementById('changeName-input').value)\"class=\"fa-regular fa-floppy-disk confirm-ChangeName-button\"></i></div>"
+                    if (players[player]["inPlay"] == true) {
+                        playersConnectedList = playersConnectedList +
+                            "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-user playerStatus-button playing\"></i></div></div>"
+                    } else {
+                        playersConnectedList = playersConnectedList +
+                            "<div onclick=\"togglePlayerStatus(this, peer.id)\" id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div>"
+                    }
+                } else {
+                    playersConnectedList = playersConnectedList + "<div style=\"color:" + players[player]["colour"] + ";\" class=\"player-container\">"
+                    if (players[player]["readyUp"] == true) {
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle ready\"></i></div>"
+                    } else {
+                        playersConnectedList = playersConnectedList +
+                            "<div><i class=\"fa-solid fa-circle not-ready\"></i></div>"
+                    }
+                    playersConnectedList = playersConnectedList +
+                        "<div id=\"showName-container\"class=\"showName-container\"><p style=\"color: " + players[
+                            player]["colour"] + ";\" class=\"player-name-text\">" +
+                        players[player]["playerName"] +
+                        "</p></div>"
+                    if (players[player]["inPlay"] == true) {
+                        playersConnectedList = playersConnectedList +
+                            "<div id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-user playerStatus-button playing\"></i></div></div>"
+                    } else {
+                        playersConnectedList = playersConnectedList +
+                            "<div id=\"playerStatus-button-container\" class=\"playerStatus-button-container\"><i class=\"fa-solid fa-eye playerStatus-button spectating\"></i></div></div>"
+                    }
+                }
             }
             playerListElement.innerHTML = playersConnectedList;
         }
 
-        function displayRandomPicture(url) {
-            document.getElementById('caption-random-pic').src = url;
-            document.getElementById('vote-random-pic').src = url;
-        }
-
-        function submitCaption() {
-            const captionText = document.getElementById('caption-input').value;
-            if (conn && conn.open) {
-                conn.send(["submitCaption", {
-                    "playerID": peer.id,
-                    "caption": captionText
-                }]);
+        function setPlayerReady(e, playerID, isReady) {
+            if (e != null) {
+                $(e).fadeOut(500);
             }
+            playersInGame[playerID]['ready'] = isReady;
         }
 
-        function displayCaptionsForVoting(captions) {
-            const captionsContainer = document.getElementById('captions-container');
-            captionsContainer.innerHTML = '';
-            captions.forEach((caption, index) => {
-                const captionElement = document.createElement('div');
-                captionElement.classList.add('caption');
-                captionElement.innerHTML = `<p class="caption-text">${caption.text}</p><button class="vote-button" onclick="voteForFunniestCaption(${index})">Vote</button>`;
-                captionsContainer.appendChild(captionElement);
-            });
-        }
-
-        function voteForFunniestCaption(captionIndex) {
-            if (conn && conn.open) {
-                conn.send(["castVote", {
-                    "playerID": peer.id,
-                    "captionIndex": captionIndex
-                }]);
-            }
-        }
-
-        function updateScoreBoard(scores) {
-            const scoreBoard = document.querySelector('.score-list');
-            scoreBoard.innerHTML = '';
-            for (let playerID in scores) {
-                const scoreElement = document.createElement('div');
-                scoreElement.classList.add('score-player-container');
-                scoreElement.innerHTML = `<p class="score-player-name">${players[playerID].name}</p><p class="player-score">${scores[playerID]}</p>`;
-                scoreBoard.appendChild(scoreElement);
-            }
-        }
-
-        function displayWinner(winner) {
-            const winnerContainer = document.getElementById('gameOver');
-            winnerContainer.innerHTML = `<h1>Winner: ${winner.name}</h1><p>Score: ${winner.score}</p>`;
+        function updateGameUI(gameState) {
+            // Implement the update game UI based on the received game state
         }
     </script>
 </body>
