--- a/Mimic/Host.html
+++ b/Mimic/Host.html
@@ -176,9 +176,12 @@
              * peer object.
              */
             function initialize() {
-                // Create own peer object with connection to shared PeerJS server
-                peer = new Peer(null, {
-                    debug: 2
+            // Create own peer object with connection to shared PeerJS server
+                const peer = new Peer(null, {
+                    host: 'juniper-silent-shawl.glitch.me',  // Your Glitch PeerJS server
+                    path: '/myapp',                          // The path you set in your server code
+                    secure: true,
+                    debug: 2,
                 });
 
                 peer.on('open', function (id) {
