--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -185,8 +185,11 @@
              */
             function initialize() {
                 // Create own peer object with connection to shared PeerJS server
-                peer = new Peer(null, {
-                    debug: 2
+                const peer = new Peer(null, {
+                    host: 'juniper-silent-shawl.glitch.me',  // Your Glitch PeerJS server
+                    path: '/myapp',                          // The path you set in your server code
+                    secure: true,
+                    debug: 2,
                 });
 
                 peer.on('open', function (id) {
