--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -186,6 +186,7 @@
             function initialize() {
                 // Create own peer object with connection to shared PeerJS server
                 const peer = new Peer(null, {
+                    host: 'juniper-silent-shawl.glitch.me',  // Your Glitch PeerJS server
                     debug: 2,
                 });
 
