--- a/Mimic/send.html
+++ b/Mimic/send.html
@@ -187,6 +187,8 @@
                 // Create own peer object with connection to shared PeerJS server
                 const peer = new Peer(null, {
                     host: 'juniper-silent-shawl.glitch.me',  // Your Glitch PeerJS server
+                    path: '/myapp',                          // The path you set in your server code
+                    secure: true,
                     debug: 2,
                 });
 
